--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -13,5 +13,6 @@
     <div id="containerButton">
       <ion-button expand="block" (click)="presentAlert()">Mostrar Información</ion-button>
     </div>
+    <h4>animation</h4>
   </div>
 </ion-content>
