añadimos page animacion y archivo ts para animación entre pantallas

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -13,6 +13,7 @@
     <div id="containerButton">
       <ion-button expand="block" (click)="presentAlert()">Mostrar Información</ion-button>
     </div>
-    <h4>animation</h4>
+    <h3>animación</h3>
+    <ion-button [routerLink]="['/animacion']">start</ion-button>
   </div>
 </ion-content>
