--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -40,3 +40,8 @@ ion-header ion-toolbar ion-title {
   #containerInput ion-item{
     --color-hover: rgb(1,35,69);
   }
+
+  .blanco {
+    --color: rgb(1,35,69);
+    --border-color: rgb(1,35,69);
+  }
